--- a/artysci.html
+++ b/artysci.html
@@ -20,6 +20,7 @@
     <!-- Main Stylesheet CSS -->
     <link rel="stylesheet" href="festival.css?id=8">
     <link rel="stylesheet" href="rules.css?id=8">
+    <link rel="stylesheet" href="team.css">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
@@ -91,21 +92,156 @@
             </div>
 
         </header>
-        <section class="contact">
-            <div class="team-h">
+        <div class="team-container">
+            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Artists</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card" >
+                <a href="o-festiwalu.html" class="card">
                     About festival
                 </a>
-                <a href="program.html" class="card" >
+                <a href="program.html" class="card">
                     Program
                 </a>
 
             </div>
-        </section>
 
+            <div class="flex-team">
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members">Katarzyna Sobich</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Katarzyna Sobich was born on February 26, 2000. She began learning to play the piano at the
+                            age of 8 at the Mieczysław Karłowicz State Music School in Zielona Góra. She completed her
+                            bachelor's degree at the Ignacy Jan Paderewski Academy of Music in Poznań, where she
+                            studied composition and piano. Currently, she finishes her master studies in piano class of
+                            prof. Maciej Pabich and Dr Łukasz Byrdy at the same institution in Poznań.
+                            The young artist has participated in numerous piano competitions, earning various awards and
+                            distinctions. Among her achievements are the 3rd prize at the International Piano
+                            Competition
+                            “Chopin Plus” in Krakow (2024) and the 3rd prize at the International Kłodzko Piano
+                            Competition (2024). She has performed in many prestigious venues across Poland, including
+                            concert halls of music academies in Poznań, Wrocław and Katowice, as well as in the
+                            Florianka Hall in Krakow. Katarzyna has frequently premiered works by young composers as
+                            part of the Academic Conference &quot;Neofonia.&quot; In 2024, she also performed at the
+                            Zbigniew
+                            Śliwiński National Piano Festival in Gdańsk.
+                        </p>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members"> Maciej Domagała</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Maciej Domagała, born in 2008 in Kutno, is a student at the Stanisław Moniuszko Music
+                            School in Gąbin, where he studies piano with Dr. hab. Jarosław Domagała. In 2024, he
+                            received a scholarship from the National Institute of Music and Dance in Warsaw and the
+                            Podkarpacka Foundation for Cultural Development.
+                            Maciej is a laureate of numerous international piano competitions, including the Polish and
+                            Ukrainian Music Competition in Kharkiv (2019), the International Chopin Piano Competition
+                            in Vienna (2021), the 22nd International J. Zarębski Competition in Łomianki-Warsaw
+                            (2022), the International Chopin Piano Competition in Turzno (2023), the 9th International
+
+                            Online Piano Competition in Trzciana (2023), the International Henryk Melcer Piano
+                            Competition in Kalisz (2023), the International Music Competition in Krakow (2023), the 2nd
+                            International Online Music Competition “Music is life” Krakow-Vienna (2023), the Concurs
+                            Internacional De Piano On-Line Chopin Sessions in Felanitx (2023), the International Online
+                            Piano Competition “Musical Phenomena” (2023), and the London International Chopin
+                            Competition (2024).
+                            Maciej has performed in the United Kingdom, Germany, Austria, the Czech Republic,
+                            Hungary, Ukraine, and Poland, in venues such as the National Philharmonic, the Grand
+                            Theatre in Warsaw, the Władysław Szpilman Polish Radio Studio in Warsaw, Calisia One, the
+                            Music Salon at the F. Nowowiejski Museum in Poznań, the Fryderyk Chopin European
+                            Centre in Sanniki, the Herbst Palace Museum in Łódź, the Stefan Stuligrosz Concert Hall at
+                            the Academy of Music in Poznań, Ujazdowski Park in Warsaw, the Birthplace of Fryderyk
+                            Chopin in Żelazowa Wola, the Romantic Palace in Turzno, and the Krzysztof Penderecki
+                            European Centre for Music in Lusławice.
+                            He participated in the 19th International Piano Forum “Bieszczady Without Borders” in
+                            Sanok in 2024, where he performed with the Lviv Chamber Orchestra “Akademia”. He also
+                            took part in the Piano Workshops in Krynica-Zdrój (2019), the “Master and Students” Course
+                            at the Palace in Rybna and “Play with the Master” in Gniezno, where he studied under the
+                            guidance of professors such as Elżbieta Tarnawska, Joanna Ławrynowicz-Just, Beata
+                            Bilińska, Piotr Paleczny, and Andrzej Tatarski. He also participated in the educational
+                            series
+                            “Chopinoteka: Listening Workshops” at the Birthplace of Fryderyk Chopin in Żelazowa
+                            Wola. Maciej took part in the Chopin en Vacances Festival in 2023 and 2024, the 10th
+                            International I. J. Paderewski Festival and the 26th International Piano Festival “Musical
+                            Floralia – Music in Flowers” (2022). He is a laureate of the 2nd (2022) and 3rd (2023)
+                            editions of the Polish Radio Chopin Alternative Competition in the Polonaise and Ballad
+                            categories.
+                            In 2019, Maciej was awarded the title of Personality of the Year by the editorial team of
+                            "Polska Times" in the Culture category, and in 2020, he received an Artistic Scholarship
+                            from
+                            the Marshal of the Łódź Voivodeship.
+                    </div>
+                </div>
+
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members">Stefano Brizzi</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Stefano Brizzi is a young pianist born in Fondi (Italy) in 2007 who began studying piano at
+                            the age of 7.
+                            His musical journey, initially accompanied only by Maestro Luigi Carroccia, continued with
+                            participation in
+                            the advanced piano courses at the International Academy of Music and Art AIMART in Rome,
+                            under the
+                            guidance of Maestro Giorgia Alessandra Brustia.
+                            Stefano has performed in a lot of important music events, such as the Fondi Music Festival,
+                            Settimane
+                            Musicali Internazionali, the International Courses of musical interpretation – Umbria
+                            Classica Association,
+                            the EuroArts Music Festival & Academy in Szczecin (Poland), and the recitals organized
+                            by the Hungarian
+                            Academy in Rome.
+                            Furthermore, since 2018 Stefano stood out in various international piano competitions,
+                            achieving
+                            numerous awards including the first prizes and first absolute prizes obtained in Rome,
+                            Bologna, Baronissi,
+                            Minerbio and Spoleto.
+                            In 2022 he got the 1st prize in the selection phase of the Steinway Piano Competition for
+                            young talents,
+                            which earned him the participation in the Italian final in Verona where he won the
+                            "Iancu Tucarman"
+                            special prize. 2023 turns out to be an even more successful year, in fact Stefano is the
+                            absolute winner of
+                            Henryk Melcer Piano Competition (Poland) and a first prize winner of Orbetello International
+                            Piano
+                            competition - junior.
+                            Despite his young age, the pianist has already achieved success in several concert halls
+                            performing in Italy,
+                            Austria, Poland and Romania.
+                            A special mention deserves the collaboration with the Italian Cultural Institute in
+                            Bucharest thanks to which
+                            Stefano performed at the “George Enescu” Philharmonic, attracting the attention of
+                            prestigious critics as
+                            Dumitru Avakian, who dedicated to him reviews and articles of appreciation in specialized
+                            magazines such
+                            as Adevarul and re-proposing his performance on the Romanian national television.
+                        </p>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+
+
+
+
+
+        </div>
+        </div>
 
 
 
