--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -20,6 +20,7 @@
     <!-- Main Stylesheet CSS -->
     <link rel="stylesheet" href="festival.css?id=8">
     <link rel="stylesheet" href="rules.css?id=8">
+    <link rel="stylesheet" href="team.css">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
@@ -90,12 +91,14 @@
             </div>
 
         </header>
-        <section class="contact">
-            <div class="team-h">
+
+
+        <div class="team-container">
+            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Artyści</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card" >
+                <a href="o-festiwalu.html" class="card">
                     O festiwalu
                 </a>
                 <a href="program.html" class="card">
@@ -103,7 +106,125 @@
                 </a>
 
             </div>
-        </section>
+
+            <div class="flex-team">
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members">Katarzyna Sobich</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Katarzyna Sobich urodziła się 26 lutego 2000 roku. Naukę gry na fortepianie rozpoczęła w
+                            wieku 8 lat w Państwowej Szkole Muzycznej I i II stopnia im. M. Karłowicza w Zielonej Górze.
+                            Studia licencjackie ukończyła w Akademii Muzycznej im. I. J. Paderewskiego w Poznaniu, na
+                            kierunkach kompozycja oraz fortepian. Obecnie jest studentką roku dyplomowego studiów
+                            magisterskich w klasie fortepianu dr. Łukasza Byrdy na poznańskiej uczelni.
+
+                            Młoda artystka brała udział w wielu konkursach pianistycznych, zdobywając nagrody i
+                            wyróżnienia, w tym m.in. III nagrodę na Międzynarodowym Konkursie Pianistycznym „Chopin
+                            plus” w Krakowie (2024) oraz III nagrodę i Nagrodę Specjalną Rektora AMKL na Międzynarodowym
+                            Kłodzkim Konkursie Pianistycznym (2024). Pianistka występowała w wielu salach koncertowych w
+                            Polsce, m.in. w Akademiach Muzycznych w Poznaniu, Wrocławiu, Katowicach oraz w Auli
+                            Florianka w Krakowie. Wielokrotnie prawykonywała utwory młodych kompozytorów w ramach
+                            Ogólnopolskiej Konferencji Studencko-Doktoranckiej „Neofonia”. W 2024 roku wystąpiła również
+                            podczas I Ogólnopolskiego Festiwalu Pianistycznego im. Zbigniewa Śliwińskiego w Gdańsku
+                        </p>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members"> Maciej Domagała</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Maciej Domagała, ur. w 2008 r. w Kutnie, jest uczniem Szkoły Muzycznej im. S. Moniuszki w
+                            Gąbinie w klasie fortepianu dr. hab. Jarosława Domagały. W 2024 r. uzyskał stypendium
+                            Narodowego Instytutu Muzyki i Tańca w Warszawie oraz Podkarpackiej Fundacji Rozwoju Kultury.
+
+                            Jest laureatem wielu międzynarodowych konkursów pianistycznych, w tym m.in.: Konkursu
+                            Polskiej i Ukraińskiej Muzyki w Charkowie (2019), International Chopin Piano Competition w
+                            Wiedniu (2021), XXII Międzynarodowego Konkursu im. J. Zarębskiego w Łomiankach-Warszawie
+                            (2022), Międzynarodowego Pianistycznego Konkursu Chopinowskiego w Turznie (2023), IX
+                            Międzynarodowego Konkursu Pianistycznego Online w Trzcianie (2023), International Henryk
+                            Melcer Piano Competition w Kaliszu (2023), International Music Competition w Krakowie
+                            (2023), II International Online Music Competition „Music is Life” Kraków-Wiedeń (2023),
+                            Concurs Internacional De Piano On-Line Chopin Sessions w Felanitx (2023), Międzynarodowego
+                            Konkursu Pianistycznego online „Fenomeny Muzyczne” (2023) oraz London International Chopin
+                            Competition (2024).
+
+                            Maciej koncertował w wielu krajach, takich jak Wielka Brytania, Niemcy, Austria, Czechy,
+                            Węgry, Ukraina i Polska. Występował m.in. w Filharmonii Narodowej, Teatrze Wielkim w
+                            Warszawie, Studio Polskiego Radia im. Władysława Szpilmana w Warszawie, Calisia One, Salonie
+                            Muzycznym – Muzeum F. Nowowiejskiego w Poznaniu, ECA im. F. Chopina w Sannikach, Muzeum
+                            Pałac Herbsta w Łodzi, Auli im. S. Stuligrosza AM w Poznaniu, Parku Ujazdowskim w Warszawie,
+                            Domu Urodzenia Fryderyka Chopina w Żelazowej Woli, Pałacu Romantycznym w Turznie oraz
+                            Europejskim Centrum Muzyki Krzysztofa Pendereckiego w Lusławicach.
+
+                            W 2024 r. był uczestnikiem XIX Międzynarodowego Forum Pianistycznego „Bieszczady bez granic”
+                            w Sanoku, gdzie wystąpił z Lwowską Orkiestrą Kameralną „Akademia”. Uczestniczył również w
+                            Ogólnopolskich Warsztatach Pianistycznych w Krynicy-Zdroju (2019), Kursie „Mistrz i
+                            uczniowie” w Pałacu w Rybnej oraz "Zagraj z Mistrzem" w Gnieźnie, gdzie doskonalił swoją grę
+                            pod okiem wybitnych profesorów, takich jak Elżbieta Tarnawska, Joanna Ławrynowicz-Just,
+                            Beata Bilińska, Piotr Paleczny i Andrzej Tatarski. Brał udział w cyklu edukacyjnym
+                            „Chopinoteka. Warsztaty słuchania” w Domu Urodzenia Fryderyka Chopina w Żelazowej Woli.
+
+                            Maciej wystąpił również na Festiwalu „Chopin en Vacances” w latach 2023 i 2024, a także na X
+                            Międzynarodowym Festiwalu I. J. Paderewskiego oraz XXVI Międzynarodowym Festiwalu
+                            Pianistycznym Floralia Muzyczne – Muzyka w Kwiatach (2022). Jest laureatem II (2022) i III
+                            (2023) edycji Alternatywy Konkursowej Polskiego Radia Chopin w kategoriach Polonez i
+                            Ballada.
+
+                            W 2019 r. uzyskał tytuł Osobowości Roku Redakcji „Polska Times” w kategorii Kultura, a w
+                            2020 r. otrzymał Stypendium Artystyczne Marszałka Województwa Łódzkiego.
+                        </p>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members">Stefano Brizzi</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Stefano Brizzi to młody pianista urodzony w Fondi we Włoszech w 2007 roku, który rozpoczął
+                            naukę gry na fortepianie w wieku 7 lat. Jego muzyczna podróż rozpoczęła się pod opieką
+                            Maestro
+                            Luigi Carroccii, a następnie kontynuował ją na zaawansowanych kursach pianistycznych w
+                            Międzynarodowej Akademii Muzyki i Sztuki AIMART w Rzymie, gdzie studiował pod kierunkiem
+                            Maestro Giorgii Alessandry Brustii.
+                            Stefano występował na wielu prestiżowych wydarzeniach muzycznych, takich jak Fondi Music
+                            Festival, Settimane Musicali Internazionali, Międzynarodowe Kursy Interpretacji Muzycznej –
+                            Umbria Classica Association, EuroArts Music Festival & Academy w Szczecinie oraz na
+                            koncertach organizowanych przez Węgierską Akademię w Rzymie.
+                            Od 2018 roku Stefano z sukcesami występuje na międzynarodowych konkursach pianistycznych,
+                            zdobywając liczne nagrody, w tym pierwsze nagrody i grand prix na konkursach organizowanych
+                            w
+                            Rzym, Bolonii, Baronissi, Minerbio i Spoleto. W 2022 roku zdobył I nagrodę w eliminacjach
+                            Konkursu Pianistycznego Steinway dla młodych talentów, co umożliwiło mu udział w włoskim
+                            finale w Weronie, gdzie zdobył specjalną nagrodę "Iancu Tucarman". Rok 2023 okazał
+                            się jeszcze
+                            bardziej udany – Stefano został zwycięzcą Konkursu Pianistycznego im. Henryka Melcera w
+                            Kaliszu oraz zdobył pierwszą nagrodę na Międzynarodowym Konkursie Pianistycznym w Orbetello
+                            - Junior.
+
+                            Pomimo młodego wieku, Stefano występował w licznych prestiżowych salach koncertowych,
+                            koncertując we Włoszech, Austrii, Polsce i Rumunii. Na szczególną uwagę zasługuje jego
+                            współpraca z Włoskim Instytutem Kultury w Bukareszcie, dzięki której Stefano wystąpił w
+                            Filharmonii „George Enescu”, przyciągając uwagę znanych krytyków, takich jak Dumitru
+                            Avakian.
+                            Jego występy zostały pozytywnie ocenione w lokalnej prasie muzycznej, a także były
+                            transmitowane w rumuńskiej telewizji narodowej.
+                        </p>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+
 
 
 
