--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -120,7 +120,7 @@
                         na celu odkrywanie i promocję talentów, przypominając jednocześnie postać Henryka Melcera-
                         wybitnego pianisty i kompozytora przez wiele lat związanego z Kaliszem.
                         Laureaci konkursu wystąpili w prestiżowych salach koncertowych oraz uczestniczyli w kursach
-                        mistrzowskich prowadzonych przez przewodniczącego jury Łukasza Byrdy.
+                        mistrzowskich prowadzonych przez przewodniczącego jury dr. Łukasza Byrdy.
                     </p>
                 </div>
                 <div class="width-form border-competition">
@@ -153,7 +153,7 @@
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy.jpg" alt="konkurs" />
                     <div class="label-photo">
-                        Kursy pianistyczne z Dr. Łukaszem Byrdy
+                        Kursy pianistyczne z dr. Łukaszem Byrdy
                     </div>
                 </div>
 
