--- a/team.html
+++ b/team.html
@@ -187,7 +187,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-3.jpg" alt="team member" />
-                    <h1 class="h1-team-members">Łukasz Byrdy MA</h1>
+                    <h1 class="h1-team-members">PhD Łukasz Byrdy MBA</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
