--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -201,7 +201,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/team-3.jpg" alt="team member" />
-                    <h1 class="h1-team-members">Łukasz Byrdy MA</h1>
+                    <h1 class="h1-team-members"> Dr Łukasz Byrdy</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
