--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -91,7 +91,7 @@
 
         </header>
         <section class="contact">
-            <div class="team-h">
+            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">O festiwalu</h1>
             </div>
             <div class="main-festiwal margin-bez">
@@ -115,7 +115,7 @@
                         I Kaliski Festiwal Pianistyczny to wyjątkowe wydarzenie, podczas którego publiczność będzie
                         miała okazję wysłuchać interpretacji utworów z różnych epok w wykonaniu utytułowanych pianistów
                         z Austrii, Polski i Włoch. Wśród zaproszonych artystów znajdują się także laureaci
-                        zeszłorocznego I Międzynarodowego Konkursu Pianistycznego im. Henryka Melcera <a href="https://calisia-arts.com/polish-version-calisia-web/wyniki.html" class="link-google" target="_blank">(wyniki)</a>
+                        zeszłorocznego I Międzynarodowego Konkursu Pianistycznego im. Henryka Melcera <a href="https://calisia-arts.com/polish-version-calisia-web/wyniki.html" class="link2" target="_blank">(wyniki)</a>
                         zorganizowanego przez Fundację Calisia Arts.
 
                         </br> </br>
@@ -123,7 +123,7 @@
                         pianistycznych dla uzdolnionej młodzieży z Kalisza i okolic prowadzonych przez: prof. Manfreda
                         Wagner-Artzta z Uniwersytetu Muzycznego w Wiedniu (mdw) <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">(więcej o artyście)</a>
                         , a także prof. Zbigniewa Raubo z Akademii Muzycznej im. Karola
-                        Szymanowskiego <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google" target="_blank"> (więcej o artyście)</a> w Katowicach i dr. Łukasza Byrdy z
+                        Szymanowskiego <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2" target="_blank"> (więcej o artyście)</a> w Katowicach i dr. Łukasza Byrdy z
                         Akademii Muzycznej im. I. J. Paderewskiego w Poznaniu
                         <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">(więcej o artyście)</a>.
 
