--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -20,6 +20,7 @@
     <!-- Main Stylesheet CSS -->
     <link rel="stylesheet" href="festival.css?id=8">
     <link rel="stylesheet" href="rules.css?id=8">
+    <link rel="stylesheet" href="team.css">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
@@ -90,11 +91,10 @@
             </div>
 
         </header>
-        <section class="contact">
-            <div class="team-h">
+        <div class="team-container">
+            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Program</h1>
             </div>
-
             <div class="main-festiwal margin-bez">
                 <a href="o-festiwalu.html" class="card">
                     O festiwalu
@@ -104,7 +104,122 @@
                 </a>
 
             </div>
-        </section>
+
+            <div class="flex-team">
+                <div class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members">21.10.2024</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team program-text">
+                            <span class="gold"> 13:00 - 16:00 </span> - Kursy z dr. Łukaszem Byrdy <br>
+                            <span class="gold"> 17:00 </span> - Wykład prof. Zbigniewa Raubo : "Triada ostatnich Sonat
+                            L. van Beethovena. Apogeum stylu
+                            klasycznego czy nowy rozdział?" <br>
+                            <span class="gold"> 18:00 </span> - Recital prof. Zbigniewa Raubo
+                            <span class="gold">Program recitalu: </span> <br>
+
+                            - F. Schubert: Klavierstuck es-moll D 946 <br>
+                            - J. Brahms: Scherzo es-moll op. 4 <br>
+                            - L. van Beethoven: Sonata As-dur op. 110 <br>
+                            - F. Chopin: Nokturn c-moll op. 48 nr 1 <br>
+                            - F. Chopin: Andante Spianato i Wielki Polonez Es-dur op. 22 <br>
+
+                            <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2 text2"
+                                target="_blank">Więcej informacji o artyście</a>
+
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members">22.10.2024</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team program-text">
+                            <span class="gold">13:00 - 16:00 </span> - Kursy z prof. Zbigniewem Raubo <br>
+                            <span class="gold"> 15:00</span> - Recital dr. Łukasza Byrdy<br>
+                            <span class="gold">Program recitalu: </span> <br>
+
+                            - D. Scarlatti - Sonata d-moll K. 9 <br>
+                            - D . Scarlatti - Sonata d-moll K. 1 <br>
+                            - F. Chopin - Rondo a la Mazur op. 5 <br>
+                            - J. Brahms - III Sonata f-moll op. 5 <br>
+                            <a href="https://lukaszbyrdy.com/" class="link2 text2" target="_blank">Więcej informacji o
+                                artyście</a> <br> <br>
+                            <span class="gold"> 17:00 </span> - Wykład prof. Manfreda Wagnera- Artzta „O interpretacji
+                            muzyki fortepianowej Klasyków
+                            Wiedeńskich“ <br>
+                            <span class="gold"> 18:00 </span> - Recital prof. Manfreda Wagnera-Artzta <br>
+                            <span class="gold">Program recitalu: </span> <br>
+                            - J. Haydn - Sonata e-moll Hob. XVI/34 <br>
+                            - W. A. Mozart - Sonata F-dur KV 332 <br>
+                            - L. van Beethoven - Sonata c-moll op. 13 <br>
+                            <a href="https://www.wagnerartzt.com/" class="link2 text2" target="_blank">Więcej informacji
+                                o artyście</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="box-1-team">
+                    <div class="small-class-team">
+
+                        <h1 class="h1-team-members">23.10.2024</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team program-text">
+                            <span class="gold">13:00 - 16:00 </span> - Kursy z prof. Manfredem Wagnerem-Artztem <br>
+                            <span class="gold"> 15:00 </span> - Recital Katarzyny Sobich <br>
+                            <span class="gold">Program recitalu: </span> <br>
+                            - F.Chopin – Mazurek a-moll op. 59 nr 1 <br>
+                            - F.Chopin – Preludia op. 28 nr 1, 2, 6, 10, 13, 15 <br>
+                            - F. Chopin – Nokturn G-dur op. 37 nr 2 <br>
+                            - F. Chopin – Fantazja f-moll op. 49 <br>
+                            - I.J. Paderewski – Krakowiak Fantastyczny H-dur op. 14 nr 6 <br>
+                            <a href="https://calisia-arts.com/polish-version-calisia-web/artysci.html" class="link2 text2"
+                                target="_blank">Bio</a> <br>
+
+
+                            <span class="gold"> 17:15 </span> - Podsumowanie Festiwalu oraz recitale
+                            laureatów zeszłorocznego Konkursu <br> - Macieja Domagały oraz Stefano Brizziego <br>
+
+                            <span class="gold"> 17:45 </span> - Recital Macieja Domagały
+                           <br>
+                            <span class="gold">Program recitalu: </span> <br>
+                            - F. Chopin - Walc As-dur op. 34 nr 1 <br>
+                            - I.J. Paderewski - Sarabanda h-moll z Humoresques de concert a l'antique op. 14 <br>
+                            - F. Chopin - Sonata h-moll op. 58 <br>
+                            <a href="https://calisia-arts.com/polish-version-calisia-web/artysci.html" class="link2 text2"
+                                target="_blank">Bio</a> <br>
+
+                            <span class="gold"> 18:30 </span> - Recital Stefano Brizziego
+                            <br>
+                            <span class="gold">Program recitalu: </span> <br>
+                            - C.W. Gluck- G. Sgambati - Melodia z „Orfeusz i Eurydyka” <br>
+                            - F.Liszt - Etiuda transcendentalna nr 8 „Wilde Jagd” <br>
+                            - F. Chopin - Scherzo cis-moll op. 39 <br>
+                            - F.Liszt - Rapsodia węgierska nr 12 <br>
+                            - J.Brahms - Wariacje na temat Paganiniego op. 35, cz. I <br>
+
+
+                            <a href="https://calisia-arts.com/polish-version-calisia-web/artysci.html" class="link2 text2"
+                                target="_blank">Bio</a>
+                        </p>
+                    </div>
+                </div>
+
+
+
+
+
+            </div>
+        </div>
 
 
 
