--- a/program.html
+++ b/program.html
@@ -20,6 +20,8 @@
     <!-- Main Stylesheet CSS -->
     <link rel="stylesheet" href="festival.css?id=8">
     <link rel="stylesheet" href="rules.css?id=8">
+    <link rel="stylesheet" href="team.css">
+
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
