--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -118,7 +118,7 @@
                         opportunity to enjoy performances of works from various musical eras by acclaimed
                         pianists from Austria, Poland, and Italy. Among the invited artists are also the
                         laureates of last year's 1st International Henryk Melcer Piano Competition <a
-                            href="https://calisia-arts.com/polish-version-calisia-web/wyniki.html" class="link-google"
+                            href="https://calisia-arts.com/polish-version-calisia-web/wyniki.html" class="link-google link2"
                             target="_blank">(results)</a>, organized by the Calisia Arts Foundation.
 
                         </br> </br>
@@ -127,7 +127,7 @@
                         by Prof. Manfred Wagner-Artzt from the University of Music and Performing Arts
                         Vienna <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">(more
                             information)</a>Prof. Zbigniew Raubo from the Karol Szymanowski Academy of Music in Katowice
-                        <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google"
+                        <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google link2"
                             target="_blank"> (more information)</a>
                         and Dr. Łukasz Byrdy from the Ignacy Jan Paderewski Academy of Music in Poznań <a
                             href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">(more
