--- a/program.html
+++ b/program.html
@@ -117,7 +117,7 @@
                                 <span class="gold"> 13:00 - 16:00 </span> - Masterclasses with Dr. Łukasz Byrdy <br>
                                 <span class="gold"> 17:00 </span> - Lecture by Prof. Zbigniew Raubo: "The Triad of Beethoven's Last Sonatas: The Pinnacle of the
                                 Classical Style or a New Chapter?"<br>
-                                <span class="gold"> 18:00 </span> - Recital by Prof. Zbigniew Raubo
+                                <span class="gold"> 18:00 </span> - Recital by Prof. Zbigniew Raubo <br>
                                 <span class="gold">Recital Program: </span> <br>
     
                                 F. Schubert: Klavierstück in E-flat minor, D 946 <br>
