--- a/program.html
+++ b/program.html
@@ -115,7 +115,7 @@
                         <div class="team-text">
                             <p class="p-team program-text">
                                 <span class="gold"> 13:00 - 16:00 </span> - Masterclasses with Dr. Łukasz Byrdy <br>
-                                <span class="gold"> 17:00 </span> - Lecture by Prof. Zbigniew Raubo: "The Triad of Beethoven's Last Sonatas: The Pinnacle of the
+                                <span class="gold"> 17:00 </span> - Lecture by Prof. Zbigniew Raubo: "The Triad of Beethoven's Last Sonatas: <br> The Pinnacle of the
                                 Classical Style or a New Chapter?"<br>
                                 <span class="gold"> 18:00 </span> - Recital by Prof. Zbigniew Raubo <br>
                                 <span class="gold">Recital Program: </span> <br>
@@ -152,14 +152,15 @@
                                 - F. Chopin - Rondo à la Mazur, Op. 5 <br>
                                 - J. Brahms - Sonata No. 3 in F minor, Op. 5<br>
                                 <a href="https://lukaszbyrdy.com/" class="link2 text2" target="_blank">More information about the artist</a> <br> <br>
-                                <span class="gold"> 17:00 </span> - Lecture by Prof. Manfred Wagner- Artzt "On the Interpretation of the Piano Music of the
+                                <span class="gold"> 17:00 </span> - Lecture by Prof. Manfred Wagner - Artzt <br>
+                                 "On the Interpretation of the Piano Music of the
                                 Viennese Classics"<br>
                                 <span class="gold"> 18:00 </span> - Recital by Prof. Manfred Wagner-Artzt <br>
                                 <span class="gold">Recital Program: </span> <br>
                                 - J. Haydn - Sonata in E minor, Hob.XVI/34  <br>
                                 - W. A. Mozart - Sonata in F major, KV 332 <br>
                                 - L. van Beethoven - Sonata in C minor, Op. 13 <br>
-                                <a href="https://www.wagnerartzt.com/" class="link2 text2" target="_blank">More information about the artist</a>
+                                <a href="https://www.wagnerartzt.com/" class="link2 text2" target="_blank">More information about the artist</a> <br>
                             </p>
                         </div>
                     </div>
