--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -111,7 +111,7 @@
 
                         <h1 class="h1-team-members">21.10.2024</h1>
                     </div>
-                    <div class="team-text">
+                    <div class="team-text program-mobile">
                         <p class="p-team program-text">
                             <span class="gold"> 13:00 - 16:00 </span> - Kursy z dr. Łukaszem Byrdy <br>
                             <span class="gold"> 17:00 </span> - Wykład prof. Zbigniewa Raubo : "Triada ostatnich Sonat
@@ -141,7 +141,7 @@
 
                         <h1 class="h1-team-members">22.10.2024</h1>
                     </div>
-                    <div class="team-text">
+                    <div class="team-text program-mobile">
                         <p class="p-team program-text">
                             <span class="gold">13:00 - 16:00 </span> - Kursy z prof. Zbigniewem Raubo <br>
                             <span class="gold"> 15:00</span> - Recital dr. Łukasza Byrdy<br>
@@ -172,7 +172,7 @@
 
                         <h1 class="h1-team-members">23.10.2024</h1>
                     </div>
-                    <div class="team-text">
+                    <div class="team-text program-mobile">
                         <p class="p-team program-text">
                             <span class="gold">13:00 - 16:00 </span> - Kursy z prof. Manfredem Wagnerem-Artztem <br>
                             <span class="gold"> 15:00 </span> - Recital Katarzyny Sobich <br>
